--- a/jquery_page/index.html
+++ b/jquery_page/index.html
@@ -9,12 +9,11 @@
     <div class="container">
         <div class="header-section">
             <div class="header-frame">
+                <h1>Awesome Clock</h1>
                 <span value='' id="month"></span>
                 <span value='' id="day"></span>,
-                <span value='' id="year"></span>:
-                <span value='' id="hour"></span>:
-                <span value='' id="minute"></span>:
-                <span value='' id="seconds"></span>
+                <span value='' id="year"></span>
+                <span value='' id="hour"></span>:<span value='' id="minute"></span>:<span value='' id="seconds"></span>
                 <br/>
                 <br/>
                 <button id="refresh">Refresh</button>
