--- a/vue_app/index.html
+++ b/vue_app/index.html
@@ -17,7 +17,7 @@
           >
           <br />
           <br />
-          <button v-on:click="refresh" id="refresh">Refresh</button>
+          <button v-on:click="refresh">Refresh</button>
         </div>
         <br />
       </div>
